--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ markupsafe==3.0.3
 pydantic==2.12.4
 pydantic-core==2.41.5
 python-dotenv==1.2.1
+python-multipart==0.0.20
 pyyaml==6.0.3
 sniffio==1.3.1
 starlette==0.50.0
